# QtMisc

./: .gitignore  sequenceModel.json
Gene-circuit/: .gitignore  FileIO.py  GeneticElementComponent.qml  JSConsole.qml  WindowFrameRate.qml  deploy.bat  main.py  main.qml  pd.py  requirements.txt
Gene-circuit/Assets/: qmls.json
Gene-circuit/Assets/Genetic_Element/: GeneticElementData-Zh.json
Gene-circuit/Assets/Questions/: Questions.json
Gene-circuit/Assets/Tutorial/: Tutorial.json
PySide6QML/: CommonHolderWindow.qml  GeneticElementComponent_Deprecated.qml  PySide6QML.pyproject  Temp.qml  ViewModel.qml  bio_devices.json  genochemy.py  main.cpp  main.py  view.qml
PySide6QML/Assets/: qmls.json
QtQuickPreview/: .gitignore  .qmlls.ini  1.qml  2.qml  Binding.qml  CMakeLists.txt  Circle.qml  CommonHolderWindow.qml  CustomComponent.qml  DebugUtils.js  Drag.Automatic.qml  Drag.Internal.qml  Drag_All.qml  Drag_Automatic.qml  Drag_Combination.qml  Drag_Internal.qml  DynamicLoadComponent.qml  Emulator.py  GeneticElementComponent.qml  GridLayer.qml  JSConsole.qml  JSConsoleButton.qml  LayoutDemo.qml  PlotCanvas.qml  PySide6QML.pyproject  QtQuickPreview.pyproject  RoundedRectangle.qml  SwipeBanner.qml  Temp.qml  Triangle.qml  Utils.js  ViewModel.qml  WindowFrameRate.qml  deploy.bat  ensure_runtime.bat  jsconsole.js  main.cpp  main.py  main.qml  main.spec  (+4 more)
QtQuickPreview/Assets/: PredefinedCommands.json  qmls.json
QtQuickPreview/Assets/Genetic_Element/: Assets.pptx  GeneticElementData.json
QtQuickPreview/Assets/Questions/: Questions-Zh.json  Questions.json  Tutorial.json
QtQuickPreview/FileIO/: main.qmltypes  main_qmltyperegistrations.cpp  mainmetatypes.json  qmldir
QtQuickPreview/Genetic_Element/: Assets.pptx
QtQuickPreview/PySide_QML_Samples/DataModel/: main.py
QtQuickPreview/PySide_QML_Samples/Signal_Slot/: main.py  view.qml
QtQuickPreview/tiles/: DragTile.qml  DropTile.qml
