cmake_minimum_required(VERSION 3.16)

project(QtQuickPreview VERSION 0.1 LANGUAGES CXX)

set(CMAKE_AUTOMOC ON)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 6.2 COMPONENTS Quick REQUIRED)

qt_add_executable(appQtQuickPreview
    main.cpp
)

qt_add_qml_module(appQtQuickPreview
    URI QtQuickPreview
    VERSION 1.0
    QML_FILES main.qml
    QML_FILES WindowFrameRate.qml
    RESOURCES Genetic_Element/9XUAS.png Genetic_Element/9XUAS1.png Genetic_Element/CMV.png Genetic_Element/CMV1.png Genetic_Element/GAL-4.png Genetic_Element/GAL-41.png Genetic_Element/INS.png Genetic_Element/INS1.png Genetic_Element/Luciferase.png Genetic_Element/Luciferase1.png Genetic_Element/miRNA.png Genetic_Element/miRNA1.png Genetic_Element/P-GIP.png Genetic_Element/P-GIP1.png Genetic_Element/Test1.png Genetic_Element/test2.png Genetic_Element/test3.png Genetic_Element/test31.png Genetic_Element/U6-P.png Genetic_Element/U6-P1.png Genetic_Element/U6-P2.png Light_button/Light_close.png Light_button/Light_close_m.png Light_button/Light_close_s.png Light_button/Light_close_sm.png Light_button/Light_close_ss.png Light_button/Light_open.png Light_button/Light_open_s.png
    RESOURCES Light_button/Light_close.png Light_button/Light_close_m.png Light_button/Light_close_s.png Light_button/Light_close_sm.png Light_button/Light_close_ss.png Light_button/Light_open.png Light_button/Light_open_s.png
    QML_FILES Temp.qml
    QML_FILES CustomComponent.qml
    QML_FILES DynamicLoadComponent.qml
    QML_FILES Drag_All.qml
    QML_FILES Drag_Internal.qml
    QML_FILES Utils.js
    QML_FILES CommonHolderWindow.qml
    QML_FILES GridLayer.qml
    QML_FILES LayoutDemo.qml
    QML_FILES tiles/DragTile.qml tiles/DropTile.qml tiles/tiles.qml
    QML_FILES jsconsole.js JSConsole.qml
)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(appQtQuickPreview PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appQtQuickPreview
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(appQtQuickPreview
    PRIVATE Qt6::Quick)

include(GNUInstallDirs)
install(TARGETS appQtQuickPreview
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})
